--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
+    "google-maps-react": "^2.0.2",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-dropdown": "^1.6.4",
+    "react-facebook-login": "^4.1.1",
+    "react-fontawesome": "^1.6.1",
+    "react-google-login": "^5.0.5",
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
+    "react-timeout": "^1.2.0",
+    "semantic-react": "^0.12.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-dropdown": "^2.4.1",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
