--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-facebook-login": "^4.1.1",
     "react-fontawesome": "^1.6.1",
     "react-google-login": "^5.0.5",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "react-timeout": "^1.2.0",
